--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    flavorDimensions "version"
+
+    productFlavors {
+
+        free {
+
+            applicationId "com.udacity.gradle.builditbigger.free"
+            versionName "1.0-free"
+        }
+
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+            versionName "1.0-paid"
+        }
+    }
 }
 
 dependencies {
