--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
-    implementation 'com.google.android.gms:play-services-ads:18.0.0'
+    freeImplementation 'com.google.android.gms:play-services-ads:18.0.0'
     implementation 'com.google.android.gms:play-services-measurement:17.0.0'
     implementation 'com.google.android.gms:play-services-measurement-sdk:17.0.0'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
