--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,11 +61,23 @@ dependencies {
     freeImplementation 'com.google.android.gms:play-services-ads:18.0.0'
     implementation 'com.google.android.gms:play-services-measurement:17.0.0'
     implementation 'com.google.android.gms:play-services-measurement-sdk:17.0.0'
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+//    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
 
     testImplementation 'junit:junit:4.12'
     implementation project(':javaJokes')
     implementation project(":androidjokes")
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha01'
+//    androidTestImplementation 'androidx.test:rules:1.3.0-alpha01'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    implementation 'androidx.test.espresso:espresso-core:3.2.0'
+//    androidTestImplementation 'androidx.test:rules:1.3.0-alpha01'
+    implementation 'androidx.test.espresso.idling:idling-concurrent:3.2.0'
+
+    // The following Espresso dependency can be either "implementation"
+    // or "androidTestImplementation", depending on whether you want the
+    // dependency to appear on your APK's compile classpath or the test APK
+    // classpath.
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
 }
