--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,37 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+
+task startAppEngine {
+    dependsOn ":backend:appengineStart"
+    doLast {
+        println "Task [startAppEngine] completed App Engine started"
+    }
+}
+
+task runAndroidTest {
+    dependsOn ":app:connectedAndroidTest"
+    doLast {
+        println "Task [runAndroidTest] completed Test reports can be found in the build directory"
+    }
+}
+
+task stopAppEngine {
+    dependsOn ":backend:appengineStop"
+    doLast {
+        println "Task [stopAppEngine] completed App Engine stopped"
+    }
+}
+
+task buildItBiggerCustomTask {
+    dependsOn "startAppEngine", "runAndroidTest"
+    mustRunAfter "startAppEngine"
+    finalizedBy "stopAppEngine"
+    doLast {
+        println "Task [jokeAppCustomTask] completed Task cycle completed"
+    }
+}
+
 allprojects {
     repositories {
         google()
